fix buttion align

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,30 +21,31 @@
     "footer footer footer";
 
   z-index: 1;
+  overflow: hidden
 }
 #header {
   grid-area: 1 / 1 / 2 / 4;
-  /* z-index: 1; */
+  z-index: 3;
 }
 
 #footer {
   grid-area: 3 / 1 / 4 / 4;
-  /* z-index: 1; */
+  z-index: 3;
 }
 
 #preview-sidebar {
   grid-area: 2 / 1 / 3 / 2;
-  /* z-index: 1; */
+  z-index: 3;
 }
 
 #toolbar-sidebar {
   grid-area: 2 / 3 / 3 / 4;
-  /* z-index: 1; */
+  z-index: 3;
 }
 
 #main-editor {
   grid-area: 2 / 2 / 3 / 3;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 
